--- a/net.calculator_Maven/test-output/old/Default suite/methods.html
+++ b/net.calculator_Maven/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="767fb7">  <td>22/08/11 15:42:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Unsplash_Test.Setup()[pri:0, instance:net.calculator.Test.Unsplash_Test@294425a7]">&gt;&gt;Setup</td> 
+<tr bgcolor="b264a1">  <td>22/08/11 18:04:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ImagesTest.Setup()[pri:0, instance:net.calculator.Test.ImagesTest@6379eb]">&gt;&gt;Setup</td> 
 <td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="767fb7">  <td>22/08/11 15:42:57</td>   <td>55237</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Unsplash_Test.TearDown()[pri:0, instance:net.calculator.Test.Unsplash_Test@294425a7]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="767fb7">  <td>22/08/11 15:42:12</td>   <td>10263</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Unsplash_Test.Test()[pri:0, instance:net.calculator.Test.Unsplash_Test@294425a7]">Test</td> 
+<tr bgcolor="b264a1">  <td>22/08/11 18:05:02</td>   <td>4208</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImagesTest.Test_Images()[pri:0, instance:net.calculator.Test.ImagesTest@6379eb]">Test_Images</td> 
   <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>22/08/11 18:06:50</td>   <td>112440</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ImagesTest.TearDown()[pri:0, instance:net.calculator.Test.ImagesTest@6379eb]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
 </table>
