--- a/net.calculator_Maven/test-output/old/Default suite/methods-alphabetical.html
+++ b/net.calculator_Maven/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="767fb7">  <td>22/08/13 20:09:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Freeimages_TC.Setup()[pri:0, instance:net.calculator.Test.Freeimages_TC@294425a7]">&gt;&gt;Setup</td> 
+<tr bgcolor="767fb7">  <td>22/08/14 00:18:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Main_FinancialTest.Setup()[pri:0, instance:net.calculator.Test.Main_FinancialTest@67d48005]">&gt;&gt;Setup</td> 
 <td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="767fb7">  <td>22/08/13 20:09:37</td>   <td>16456</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Freeimages_TC.TearDown()[pri:0, instance:net.calculator.Test.Freeimages_TC@294425a7]">&lt;&lt;TearDown</td> 
+<tr bgcolor="767fb7">  <td>22/08/14 00:18:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Main_FinancialTest.Setup()[pri:0, instance:net.calculator.Test.Main_FinancialTest@67d48005]">&gt;&gt;Setup</td> 
 <td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="767fb7">  <td>22/08/13 20:09:28</td>   <td>7692</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Freeimages_TC.Test_location()[pri:0, instance:net.calculator.Test.Freeimages_TC@294425a7]">Test_location</td> 
+<tr bgcolor="767fb7">  <td>22/08/14 00:18:55</td>   <td>48272</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Main_FinancialTest.TearDown()[pri:0, instance:net.calculator.Test.Main_FinancialTest@67d48005]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="767fb7">  <td>22/08/14 00:18:55</td>   <td>48272</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Main_FinancialTest.TearDown()[pri:0, instance:net.calculator.Test.Main_FinancialTest@67d48005]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="767fb7">  <td>22/08/14 00:17:20</td>   <td>-46552</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Main_FinancialTest.Test_Links1()[pri:1, instance:net.calculator.Test.Main_FinancialTest@67d48005]">Test_Links1</td> 
+  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="767fb7">  <td>22/08/14 00:18:11</td>   <td>3877</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Main_FinancialTest.Test_Links2()[pri:2, instance:net.calculator.Test.Main_FinancialTest@67d48005]">Test_Links2</td> 
   <td>main@640070680</td>   <td></td> </tr>
 </table>
