--- a/net.calculator_Maven/test-output/old/Default suite/classes.html
+++ b/net.calculator_Maven/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>net.calculator.Test.Freeimages_TC</td>
+<td>net.calculator.Test.Calculator_Test</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Test_location</td>
+<td>Test_Calculator</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
