--- a/net.calculator_Maven/test-output/old/Default suite/methods.html
+++ b/net.calculator_Maven/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="767fb7">  <td>22/08/14 00:29:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Freeimages_TC.Setup()[pri:0, instance:net.calculator.Test.Freeimages_TC@294425a7]">&gt;&gt;Setup</td> 
+<tr bgcolor="767fb7">  <td>22/08/15 07:18:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Calculator_Test.TearDown()[pri:0, instance:net.calculator.Test.Calculator_Test@294425a7]">&lt;&lt;TearDown</td> 
 <td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="767fb7">  <td>22/08/14 00:29:08</td>   <td>8495</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Freeimages_TC.TearDown()[pri:0, instance:net.calculator.Test.Freeimages_TC@294425a7]">&lt;&lt;TearDown</td> 
+<tr bgcolor="767fb7">  <td>22/08/15 07:18:41</td>   <td>-7096</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Calculator_Test.Setup()[pri:0, instance:net.calculator.Test.Calculator_Test@294425a7]">&gt;&gt;Setup</td> 
 <td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="767fb7">  <td>22/08/14 00:29:04</td>   <td>4311</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Freeimages_TC.Test_location()[pri:0, instance:net.calculator.Test.Freeimages_TC@294425a7]">Test_location</td> 
+<tr bgcolor="767fb7">  <td>22/08/15 07:18:44</td>   <td>-4457</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Calculator_Test.Test_Calculator()[pri:0, instance:net.calculator.Test.Calculator_Test@294425a7]">Test_Calculator</td> 
   <td>main@640070680</td>   <td></td> </tr>
 </table>
